--- a/checker/antlr.project/.project
+++ b/checker/antlr.project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>antlr</name>
+	<name>antlr.project</name>
 	<comment></comment>
 	<projects>
 	</projects>
