--- a/checker/megalib.checker/build.xml
+++ b/checker/megalib.checker/build.xml
@@ -4,7 +4,7 @@
     <!--ANT 1.7 is required                                        -->
     <!--define folder properties-->
     <property name="dir.buildfile" value="."/>
-    <property name="dir.workspace" value="${dir.buildfile}/.."/>
+    <property name="dir.workspace" value="/Users/mmay/Documents/Local Projects/eclipse workspace"/>
     <property name="dir.jarfile" value="${dir.buildfile}"/>
     <target name="create_run_jar">
         <jar destfile="${dir.jarfile}/checker.jar" filesetmanifest="mergewithoutmain">
