--- a/checker/megalib.checker/.classpath
+++ b/checker/megalib.checker/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry exported="true" kind="lib" path="/Users/mmay/Downloads/antlr-4.5.3-complete.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/mmay/github/megalib/checker/megalib.checker/checker_lib/antlr-4.5.3-complete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
