--- a/checker/pom.xml
+++ b/checker/pom.xml
@@ -49,11 +49,11 @@
   	  </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>3.5.1</version>
         <configuration>
-          <source/>
-          <target/>
-        </configuration>
+                   <source>1.8</source>
+                   <target>1.8</target>
+                </configuration>
       </plugin>
     </plugins>
   </build>
