--- a/checker/pom.xml
+++ b/checker/pom.xml
@@ -3,6 +3,9 @@
   <groupId>checker</groupId>
   <artifactId>checker</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <jdk.version>1.8</jdk.version>
+  </properties>
    <dependencies>
     <dependency>
       <groupId>org.antlr</groupId>
@@ -43,13 +46,8 @@
         </executions>
 </plugin>
       <plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-surefire-plugin</artifactId>
-    		<version>2.19.1</version>
-  	  </plugin>
-      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.3</version>
         <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
