--- a/checker/pom.xml
+++ b/checker/pom.xml
@@ -18,6 +18,12 @@
       <version>4.11</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+            <type>jar</type>
+	</dependency>
   </dependencies> 
   <build>
     <sourceDirectory>src</sourceDirectory>
