--- a/checker/pom.xml
+++ b/checker/pom.xml
@@ -59,6 +59,34 @@
                    <target>1.8</target>
                 </configuration>
       </plugin>
+      <plugin>
+    	    <groupId>org.apache.maven.plugins</groupId>
+    	    <artifactId>maven-assembly-plugin</artifactId>
+    	    <version>2.4</version>
+    	    <configuration>
+    	      <descriptorRefs>
+    	        <descriptorRef>jar-with-dependencies</descriptorRef>
+    	      </descriptorRefs>
+    	      <archive>
+    	        <manifest>
+    	          <mainClass>org.java.megalib.checker.Main</mainClass>
+    	        </manifest>
+    	      </archive>
+    	    </configuration>
+    	    <executions>
+    	      <execution>
+    	        <phase>package</phase>
+    	        <goals>
+    	          <goal>single</goal>
+    	        </goals>
+    	      </execution>
+    	    </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>2.4</version>
+        <artifactId>maven-jar-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
