--- a/checker/pom.xml
+++ b/checker/pom.xml
@@ -27,6 +27,7 @@
   </dependencies> 
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>test</testSourceDirectory>
     <resources>
       <resource>
         <directory>src</directory>
