--- a/checker/pom.xml
+++ b/checker/pom.xml
@@ -1,10 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>checker</groupId>
+  <groupId>org.softlang.megalib</groupId>
   <artifactId>checker</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
     <jdk.version>1.8</jdk.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
    <dependencies>
     <dependency>
