no manifestation for abstract artifacts hasRole is not mandatory transient artifacts are not necessarily bound

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 *.project
 *.classpath
-checker/megalib.checker/checker.jar
 *.prefs
 .metadata/
 checker/target/
 .recommenders/
-checker/Prelude.megal
-models/checker.jar
+visualizer/
