--- a/visualizer/pom.xml
+++ b/visualizer/pom.xml
@@ -36,9 +36,16 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/guru.nidi/graphviz-java -->
 		<dependency>
-    		<groupId>guru.nidi</groupId>
-    		<artifactId>graphviz-java</artifactId>
-    		<version>0.2.2</version>
+			<groupId>guru.nidi</groupId>
+			<artifactId>graphviz-java</artifactId>
+			<version>0.2.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-nop</artifactId>
+			<version>1.7.25</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
