added map legend (graphml)

--- a/visualizer/src/org/softlang/megalib/visualizer/transformation/graphml/graphml.properties
+++ b/visualizer/src/org/softlang/megalib/visualizer/transformation/graphml/graphml.properties
@@ -1,4 +1,4 @@
-Artifact.shape=ShinyPlateNode
+Artifact.shape=BevelNode2
 Artifact.color=#FA5858
 Artifact.icon=1
 Function.shape=ShinyPlateNode
@@ -11,7 +11,7 @@ Node.shape=ShinyPlateNode
 Node.color=#82FA58
 Node.icon=1
 
-Language.shape=ShinyPlateNode
+Language.shape=BevelNode2
 Language.color=#2EFEC8
 Language.icon=1
 LanguageFamily.shape=ShinyPlateNode
