--- a/visualizer/src/org/softlang/megalib/visualizer/transformation/graphml/graphml.properties
+++ b/visualizer/src/org/softlang/megalib/visualizer/transformation/graphml/graphml.properties
@@ -1,17 +1,17 @@
 Artifact.shape=BevelNode2
 Artifact.color=#FA5858
 Artifact.icon=1
-Function.shape=ShinyPlateNode
+Function.shape=BevelNode2
 Function.color=#FAAC58
 Function.icon=1
-System.shape=ShinyPlateNode
+System.shape=BevelNode2
 System.color=#D0FA58
 System.icon=1
-Node.shape=ShinyPlateNode
+Node.shape=BevelNode2
 Node.color=#82FA58
 Node.icon=1
 
-Language.shape=BevelNode2
+Language.shape=ShinyPlateNode
 Language.color=#2EFEC8
 Language.icon=1
 LanguageFamily.shape=ShinyPlateNode
@@ -25,21 +25,21 @@ Notation.color=#FE2EF7
 Notation.icon=1
 
 
-ArchitecturalPattern.shape=ShinyPlateNode
+ArchitecturalPattern.shape=BevelNode
 ArchitecturalPattern.color=#800080
 ArchitecturalPattern.icon=1
-ProgrammingDomain.shape=ShinyPlateNode
+ProgrammingDomain.shape=BevelNode
 ProgrammingDomain.color=#8B008B
 ProgrammingDomain.icon=1
-TechnologySpace.shape=ShinyPlateNode
+TechnologySpace.shape=BevelNode
 TechnologySpace.color=#8B008B
 TechnologySpace.icon=1
-AbstractProcess.shape=ShinyPlateNode
+AbstractProcess.shape=BevelNode
 AbstractProcess.color=#9932CC
 AbstractProcess.icon=1
-Construct.shape=ShinyPlateNode
+Construct.shape=BevelNode
 Construct.color=#9400D3
 Construct.icon=1
-Role.shape=ShinyPlateNode
+Role.shape=BevelNode
 Role.color=#8A2BE2
 Role.icon=1
