added icons to graphml
each Megal-typ has know a unique icon

--- a/visualizer/src/org/softlang/megalib/visualizer/transformation/graphml/graphml.properties
+++ b/visualizer/src/org/softlang/megalib/visualizer/transformation/graphml/graphml.properties
@@ -1,45 +1,45 @@
 Artifact.shape=BevelNode2
-Artifact.color=#FA5858
+Artifact.color=#A4A4A4
 Artifact.icon=1
 Function.shape=BevelNode2
-Function.color=#FAAC58
-Function.icon=1
+Function.color=#A4A4A4
+Function.icon=2
 System.shape=BevelNode2
-System.color=#D0FA58
-System.icon=1
+System.color=#A4A4A4
+System.icon=3
 Node.shape=BevelNode2
-Node.color=#82FA58
-Node.icon=1
+Node.color=#A4A4A4
+Node.icon=4
 
 Language.shape=ShinyPlateNode
-Language.color=#2EFEC8
-Language.icon=1
+Language.color=#118C01
+Language.icon=5
 LanguageFamily.shape=ShinyPlateNode
-LanguageFamily.color=#2E64FE
-LanguageFamily.icon=1
+LanguageFamily.color=#118C01
+LanguageFamily.icon=6
 Paradigm.shape=ShinyPlateNode
-Paradigm.color=#9A2EFE
-Paradigm.icon=1
+Paradigm.color=#118C01
+Paradigm.icon=7
 Notation.shape=ShinyPlateNode
-Notation.color=#FE2EF7
-Notation.icon=1
+Notation.color=#118C01
+Notation.icon=8
 
 
 ArchitecturalPattern.shape=BevelNode
-ArchitecturalPattern.color=#800080
-ArchitecturalPattern.icon=1
+ArchitecturalPattern.color=#2E64FE
+ArchitecturalPattern.icon=9
 ProgrammingDomain.shape=BevelNode
-ProgrammingDomain.color=#8B008B
-ProgrammingDomain.icon=1
+ProgrammingDomain.color=#2E64FE
+ProgrammingDomain.icon=10
 TechnologySpace.shape=BevelNode
-TechnologySpace.color=#8B008B
-TechnologySpace.icon=1
+TechnologySpace.color=#2E64FE
+TechnologySpace.icon=11
 AbstractProcess.shape=BevelNode
-AbstractProcess.color=#9932CC
-AbstractProcess.icon=1
+AbstractProcess.color=#2E64FE
+AbstractProcess.icon=12
 Construct.shape=BevelNode
-Construct.color=#9400D3
-Construct.icon=1
+Construct.color=#2E64FE
+Construct.icon=13
 Role.shape=BevelNode
-Role.color=#8A2BE2
-Role.icon=1
+Role.color=#2E64FE
+Role.icon=14
