--- a/explorer/src/model/gef.properties
+++ b/explorer/src/model/gef.properties
@@ -1,30 +1,45 @@
-Artifact.shape=tab
-Artifact.color=blue1
-Function.shape=cds
-Function.color=magenta
-System.shape=component
-System.color=midnightblue
-Node.shape=cylinder
-Node.color=limegreen
+Artifact.shape=BevelNode2
+Artifact.color=#A4A4A4
+Artifact.icon=1
+Function.shape=BevelNode2
+Function.color=#A4A4A4
+Function.icon=2
+System.shape=BevelNode2
+System.color=#A4A4A4
+System.icon=3
+Node.shape=BevelNode2
+Node.color=#A4A4A4
+Node.icon=4
 
-Language.shape=ellipse
-Language.color=red
-LanguageFamily.shape=octagon
-LanguageFamily.color=red
-Paradigm.shape=octagon
-Paradigm.color=red
-Notation.shape=octagon
-Notation.color=red
+Language.shape=ShinyPlateNode
+Language.color=#118C01
+Language.icon=5
+LanguageFamily.shape=ShinyPlateNode
+LanguageFamily.color=#118C01
+LanguageFamily.icon=6
+Paradigm.shape=ShinyPlateNode
+Paradigm.color=#118C01
+Paradigm.icon=7
+Notation.shape=ShinyPlateNode
+Notation.color=#118C01
+Notation.icon=8
 
-ArchitecturalPattern.shape=diamond
-ArchitecturalPattern.color=purple
-ProgrammingDomain.shape=diamond
-ProgrammingDomain.color=purple1
-TechnologySpace.shape=diamond
-TechnologySpace.color=purple2
-AbstractProcess.shape=diamond
-AbstractProcess.color=purple3
-Construct.shape=diamond
-Construct.color=orchid4
-Role.shape=diamond
-Role.color=maroon3
+
+ArchitecturalPattern.shape=BevelNode
+ArchitecturalPattern.color=#2E64FE
+ArchitecturalPattern.icon=9
+ProgrammingDomain.shape=BevelNode
+ProgrammingDomain.color=#2E64FE
+ProgrammingDomain.icon=10
+TechnologySpace.shape=BevelNode
+TechnologySpace.color=#2E64FE
+TechnologySpace.icon=11
+AbstractProcess.shape=BevelNode
+AbstractProcess.color=#2E64FE
+AbstractProcess.icon=12
+Construct.shape=BevelNode
+Construct.color=#2E64FE
+Construct.icon=13
+Role.shape=BevelNode
+Role.color=#2E64FE
+Role.icon=14
